--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
             <div class="container">
                 <ul>
                     <li><a href="#">Home</a></li>
-                    <li><a href="#">My NFT's</a></li>
-                    <li><a href="#">Collected NFT's</a></li>
+                    <li><a href="#">Link</a></li>
+                    <li><a href="#">Link</a></li>
                     <li><a href="#">About</a></li>
                 </ul>
             </div>
