--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
         </section>
         <aside id="sidebar">
             <p>text</p>
+            <img src="images\blue1.jpeg"/>
 
         </aside>
     </div>
