--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </section>
         <aside id="sidebar">
             <p>text</p>
-            <img src="images\blue1.jpeg" style="width:20%;height:20%;"/>
+            <img src="images\blue1.jpeg">
 
         </aside>
     </div>
