--- a/index.html
+++ b/index.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
-<html>
-<Head>
-        <Title>Website Name</Title>
+<html lang="en"></html>
+    <Head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <Title>Pressure and Sanity</Title>
         <link rel="stylesheet" type="text/css" href="css/style.css">
     </Head>
+
     <body>
         <header id="main-header">
             <div class="container">
-                <h1>My Website</h1>
+                <h1>Bripow</h1>
             </div>
         </header>
 
@@ -24,26 +28,22 @@
         
         <section id="showcase">
             <div class="container">
-                <h1> hi hey yo hello</h1>
+                <h1>Welcome</h1>
             </div>
         </section>
 <div class="container">
         <section id="main">
-            <h1>Welcome</h1>
-            <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
-                Incidunt nemo amet magnam natus autem magni consequatur quibusdam 
-                veritatis laudantium, eveniet, cumque ab explicabo culpa provident. 
-                Sequi architecto consequatur vero aliquam.</p>
+            <h1>Hey There!</h1>
+            <p> This will be a fun paragraph...</p>
         </section>
         <aside id="sidebar">
             <p>text</p>
-            <img src="#">
 
         </aside>
     </div>
 
     <footer id="main-footer">
-        <p>Copyright &copy; 2022; My Website</p>
+        <p>Copyright &copy; 2022 Bripow</p>
 
     </footer>
 
