--- a/index.html
+++ b/index.html
@@ -2,9 +2,7 @@
 <html lang="en"></html>
     <Head>
         <meta charset="utf-8">
-        <!--
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
--->
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <Title>Bripow</Title>
         <link rel="stylesheet" type="text/css" href="css/style.css">
@@ -43,11 +41,12 @@
 
         </aside>
     </div>
-
+<div class="container">
     <footer id="main-footer">
         <p>Copyright &copy; 2022 Bripow</p>
 
     </footer>
+    </div>
 
     </body>
 </html>
