--- a/index.html
+++ b/index.html
@@ -34,7 +34,13 @@
 <div class="container">
         <section id="main">
             <h1>Hey There!</h1>
-            <p> This will be a fun paragraph...</p>
+            <p> This will be a fun paragraph... Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                Dolores rem enim voluptatem laudantium minus voluptate fuga quaerat ad dolore, iure repellendus 
+                perspiciatis reiciendis ducimus? Distinctio rerum nulla assumenda excepturi delectus. Lorem ipsum 
+                dolor sit amet consectetur adipisicing elit. Est assumenda impedit necessitatibus quisquam eos, natus 
+                dolore neque voluptate molestiae, quae, sint quaerat non doloribus fuga repellendus? Mollitia minima totam 
+                quas Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis placeat commodi nostrum optio hic, est, nobis 
+                necessitatibus pariatur, adipisci ex perspiciatis voluptas quas nulla consectetur sint officiis suscipit ea repellat.</p>
         </section>
         <aside id="sidebar">
             <p>text</p>
