--- a/index.html
+++ b/index.html
@@ -42,10 +42,12 @@
                 quas Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis placeat commodi nostrum optio hic, est, nobis 
                 necessitatibus pariatur, adipisci ex perspiciatis voluptas quas nulla consectetur sint officiis suscipit ea repellat.</p>
         </section>
+        <!-- don't want this quite yet
         <aside id="sidebar">
             <p>text</p>
 
         </aside>
+    -->
     </div>
 <div class="container">
     <footer id="main-footer">
