--- a/fccprojects/tribute/index.html
+++ b/fccprojects/tribute/index.html
@@ -1,3 +1,6 @@
+<!-- Freecodecamp.org Responsive Web Design Project #1: Submitted 4/10/22
+https://codepen.io/bripow/pen/WNdyyjN
+-->
 <!DOCTYPE html>
 <html lang="en">
 
